Fix navbar alignment and width
- Adjusted navbar to prevent it from stretching across the entire browser width on larger screens.

--- a/index.css
+++ b/index.css
@@ -192,8 +192,8 @@ footer {
 }
 
 @media (min-width: 850px) {
-
-    main {
+    main,
+    nav {
         max-width: 1080px;
         margin: 0 auto;
     }
